--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -3,16 +3,6 @@
     Layout = "_LoginLayout";
 }
 <div class="container" id="container">
-    <div class="form-container sign-up-container">
-        <form action="#">
-            <h1 style="color: #26348b;">KAYIT OL</h1>
-            <input type="text" placeholder="Ad" />
-            <input type="text" placeholder="Soyad" />
-            <input type="email" placeholder="Email" />
-            <input type="password" placeholder="Şifre" />
-            <button>KAYIT OL</button>
-        </form>
-    </div>
     <div class="form-container sign-in-container">
         <form asp-controller="Auth" asp-action="Login" method="post">
             <h1 style="color: #26348b;">GİRİŞ YAP</h1>
@@ -29,9 +19,10 @@
                 <button id="signIn">GİRİŞ YAP</button>
             </div>
             <div class="overlay-panel overlay-right">
+                <img src="~/imgs/logo.png" width="170" style="margin-bottom:30px" />
                 <h1 style="font-size: 30px;">Düzce Üniversitesi</h1>
                 <h2>Yönetim Paneline Hoşgeldiniz!</h2>
-                <button id="signUp">KAYIT OL</button>
+                @*<button id="signUp">KAYIT OL</button>*@
             </div>
         </div>
     </div>
