--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/css/layout.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/layout.css">
     <title>Düzce Üniversitesi</title>
 </head>
 
 <body>
+    <!--QUICK NAV-->
     <header>
-        <!--QUICK NAV-->
         <nav>
             <ul class="nav__links">
                 <li><a href="#">Personel</a></li>
@@ -39,7 +39,7 @@
     </header>
     <!--MAIN NAV-->
     <div class="mainNavContainer container" id="mainNavContainer">
-        <a asp-controller="Home" asp-action="Index"><img id="logo" src="~/imgs/logo.png" /></a>
+        <img id="logo" src="imgs/logo.png">
         <div class="main-nav" id="main-nav">
             <ul class="nav__links">
                 <li><a href="#">Üniversitemiz</a></li>
@@ -47,10 +47,8 @@
                     <a href="#">Akademik <i class="fas fa-caret-down"></i></a>
                     <div class="dropdown__menu">
                         <ul>
-                            <li><a href="#">Dropdown 1</a></li>
-                            <li><a href="#">Dropdown 2</a></li>
                             <li>
-                                <a href="#">Dropdown 3</a>
+                                <a href="#">Fakülteler</a>
                                 <i class="fas fa-caret-right"></i>
                                 <div class="dropdown__menu-1">
                                     <ul>
@@ -63,27 +61,68 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li><a href="#">Dropdown 4</a></li>
+                            <li>
+                                <a href="#">Ensitüler</a>
+                                <i class="fas fa-caret-right"></i>
+                                <div class="dropdown__menu-1">
+                                    <ul>
+                                        <li><a href="#">Sub Dropdown 1</a></li>
+                                        <li><a href="#">Sub Dropdown 2</a></li>
+                                        <li><a href="#">Sub Dropdown 3</a></li>
+                                        <li><a href="#">Sub Dropdown 4</a></li>
+                                        <li><a href="#">Sub Dropdown 5</a></li>
+                                        <li><a href="#">Sub Dropdown 6</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">Yüksekokullar</a>
+                                <i class="fas fa-caret-right"></i>
+                                <div class="dropdown__menu-1">
+                                    <ul>
+                                        <li><a href="#">Sub Dropdown 1</a></li>
+                                        <li><a href="#">Sub Dropdown 2</a></li>
+                                        <li><a href="#">Sub Dropdown 3</a></li>
+                                        <li><a href="#">Sub Dropdown 4</a></li>
+                                        <li><a href="#">Sub Dropdown 5</a></li>
+                                        <li><a href="#">Sub Dropdown 6</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">M. Yüksekokulları</a>
+                                <i class="fas fa-caret-right"></i>
+                                <div class="dropdown__menu-1">
+                                    <ul>
+                                        <li><a href="#">Sub Dropdown 1</a></li>
+                                        <li><a href="#">Sub Dropdown 2</a></li>
+                                        <li><a href="#">Sub Dropdown 3</a></li>
+                                        <li><a href="#">Sub Dropdown 4</a></li>
+                                        <li><a href="#">Sub Dropdown 5</a></li>
+                                        <li><a href="#">Sub Dropdown 6</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </li>
-                <li><a href="#">Araştırma</a></li>
-                <li><a href="#">İhtisaslaşma</a></li>
-                <li><a href="#"><span style="color: var(--duGreen)">DÜ</span>Yayınlar</a></li>
+                <li><a href="#">Haberler</a></li>
+                <li><a href="#">Duyurular</a></li>
+                <li><a href="#">Etkinlikler</a></li>
             </ul>
         </div>
     </div>
 
-    <div class="container content">
-        @RenderBody()
-    </div>
+    @RenderBody()
 
-    <video autoplay muted loop>
-        <source src="~/imgs/intro.mp4" type="video/mp4" />
-    </video>
-    <div class="overlay"><img src="~/imgs/overlay.png" /></div>
+    <footer>
+        <div class="contact">
+            Düzce Üniversitesi Konuralp Yerleşkesi Yörük Mah. Merkez/DÜZCE, 81620
+            <br>
+            <span id="tel">TEL : 0850 800 81 81 / FAKS: 0380 542 11 03</span>
+        </div>
+    </footer>
 </body>
-</html>
 <script type="text/javascript">
     window.addEventListener("scroll", function () {
         var mainNavContainer = document.getElementById("mainNavContainer");
@@ -92,3 +131,5 @@
 </script>
 <script src="https://kit.fontawesome.com/c8d8f98236.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+</html>
