Bir viewda birden fazla model denemesi öncesi yedek.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -174,9 +174,7 @@
         <div class="col">
             <div class="info-cards">
                 <h1 id="info-text">FAKÜLTE</h1>
-                <h1 class="uni-data">
-                    XX
-                </h1>
+                <h1 class="uni-data">@ViewBag.fakulteSayisi</h1>
             </div>
         </div>
         <div class="col">
