--- a/Views/Panel/Duyurular.cshtml
+++ b/Views/Panel/Duyurular.cshtml
@@ -10,7 +10,7 @@
         {
             <li>
                 <a>
-                    @duyuru.DuyuruBaslik<span> : @duyuru.DuyuruAciklama</span>
+                    @duyuru.DuyuruBaslik
                 </a>
                 -
                 <a asp-controller="Panel" asp-action="Edit" asp-route-id="@duyuru.Id">
