--- a/Views/Panel/Etkinlikler.cshtml
+++ b/Views/Panel/Etkinlikler.cshtml
@@ -11,7 +11,7 @@
         {
             <li>
                 <a>
-                    @etkinlik.EtkinlikBaslik<span> : @etkinlik.EtkinlikAciklama</span>
+                    @etkinlik.EtkinlikBaslik
                 </a>
                 -
                 <a asp-controller="Panel" asp-action="EditEtkinlik" asp-route-id="@etkinlik.Id">
