--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         <div class="contact">
             @if (User.Identity.IsAuthenticated)
             {
-                <a class="cta" asp-controller="Panel" asp-action="Index">Panel Girişi</a>
+                <a class="cta" asp-controller="Panel" target="_blank" asp-action="Index">Panel Girişi</a>
             }
             else
             {
