--- a/Views/Shared/_PanelLayout.cshtml
+++ b/Views/Shared/_PanelLayout.cshtml
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" asp-controller="Panel" asp-action="Fakulteler">Fakülteler</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" asp-controller="Panel" asp-action="Bolumler">Bölümler</a>
+                    </li>
                 </ul>
 
                 <a asp-controller="Home" asp-action="Index" class="navbar-text" style="text-decoration:none;margin-right:20px;">
