--- a/Views/Panel/EditFakulteler.cshtml
+++ b/Views/Panel/EditFakulteler.cshtml
@@ -2,6 +2,9 @@
 @{
     Layout = "_PanelLayout";
 }
+
+@* Fakülte silindiğinde altındaki tüm bölümler de beraberinde siliniyor, uyarı gösterilecek. *@
+
 <link href="~/js/Trumbowyg-main/dist/ui/trumbowyg.min.css" rel="stylesheet" />
 <div>
     <form asp-controller="Panel" asp-action="EditFakulteler" method="post">
