Lisans-Lisansustu Sayıları Eklendi

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -142,7 +142,7 @@
             <div class="info-cards">
                 <h1 id="info-text">LİSANS PROGRAMI</h1>
                 <h1 class="uni-data">
-                    XX
+                    @ViewBag.bolumSayisi
                 </h1>
             </div>
         </div>
@@ -150,7 +150,7 @@
             <div class="info-cards">
                 <h1 id="info-text">LİSANSÜSTÜ PROGRAMI</h1>
                 <h1 class="uni-data">
-                    XX
+                    @ViewBag.lisansustuBolumSayisi
                 </h1>
             </div>
         </div>
