--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -114,9 +114,7 @@
         <div class="col">
             <div class="info-cards">
                 <h1 id="info-text">ENSTİTÜ</h1>
-                <h1 class="uni-data">
-                    XX
-                </h1>
+                <h1 class="uni-data">@ViewBag.enstituSayisi</h1>
             </div>
         </div>
         <div class="col">
