--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -120,9 +120,7 @@
         <div class="col">
             <div class="info-cards">
                 <h1 id="info-text">YÜKSEKOKUL</h1>
-                <h1 class="uni-data">
-                    XX
-                </h1>
+                <h1 class="uni-data">@ViewBag.yuksekOkulSayisi</h1>
             </div>
         </div>
         <div class="col">
