--- a/Views/Shared/_PanelLayout.cshtml
+++ b/Views/Shared/_PanelLayout.cshtml
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" asp-controller="Panel" asp-action="YuksekOkullar">YüksekOkullar</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" asp-controller="Panel" asp-action="MeslekYuksekOkullar">Meslek YüksekOkullar</a>
+                    </li>
                 </ul>
 
                 <a asp-controller="Home" asp-action="Index" class="navbar-text" style="text-decoration:none;margin-right:20px;">
