--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -126,11 +126,10 @@
         <div class="col">
             <div class="info-cards">
                 <h1 id="info-text">M. YÜKSEKOKUL</h1>
-                <h1 class="uni-data">
-                    XX
-                </h1>
+                <h1 class="uni-data">@ViewBag.meslekYuksekOkulSayisi</h1>
             </div>
         </div>
+        
     </div>
     <!--Second Row-->
     <div class="row row-cols-md-4 g-5 w-100 p-4">
