--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -386,4 +386,36 @@ footer {
     font-weight: lighter;
     text-align: center;
     background-color: #333333;
+    margin-top:70px;
+}
+
+.sideBg img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: -1;
+}
+
+.side-content {
+    width: 1200px;
+    height: 450px;
+    background-color: white;
+    margin-top: 150px;
+}
+
+.side-content .row{
+    padding:10px 0;
+    height:100%;
+}
+
+.side-content #fakulteImg {
+    width:100%;
+    height:100%;
+    background-image: url("../imgs/campus-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
