--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     </header>
     <!--MAIN NAV-->
     <div class="mainNavContainer container" id="mainNavContainer">
-        <img id="logo" src="imgs/logo.png">
+        <img id="logo" src="~/imgs/logo.png">
         <div class="main-nav" id="main-nav">
             <ul class="nav__links">
                 <li><a href="#">Üniversitemiz</a></li>
@@ -114,8 +114,7 @@
 
     <footer>
         <div class="contact">
-            Düzce Üniversitesi Konuralp Yerleşkesi Yörük Mah. Merkez/DÜZCE, 81620
-            <br>
+            <span id="adres">Düzce Üniversitesi Konuralp Yerleşkesi Yörük Mah. Merkez/DÜZCE, 81620</span>
             <span id="tel">TEL : 0850 800 81 81 / FAKS: 0380 542 11 03</span>
         </div>
     </footer>
