--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -46,58 +46,22 @@
 <section id="second-section">
     <h1>HABERLER</h1>
     <div class="row row-cols-1 row-cols-md-4 g-5 w-100 p-4">
-        <div class="col">
-            <div class="card">
-                <div class="top-line"></div>
-                <img src="./imgs/square.png" class="h-50" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Haber Başlığı</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">XX.XX.XXXX</small>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <div class="top-line"></div>
-                <img src="./imgs/square.png" class="h-50" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Haber Başlığı</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">XX.XX.XXXX</small>
+        @foreach (Haber haber in Model.Haberler)
+        {
+            <div class="col">
+                <div class="card">
+                    <div class="top-line"></div>
+                    <img src="./imgs/square.png" class="h-50" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">@haber.HaberBaslik</h5>
+                        <p class="card-text">@haber.HaberAciklama</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">@haber.HaberTarih</small>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <div class="top-line"></div>
-                <img src="./imgs/square.png" class="h-50" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Haber Başlığı</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">XX.XX.XXXX</small>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <div class="top-line"></div>
-                <img src="./imgs/square.png" class="h-50" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Haber Başlığı</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">XX.XX.XXXX</small>
-                </div>
-            </div>
-        </div>
+        }
     </div>
 </section>
 <!--THIRD CONTENT-->
