--- a/Views/Panel/EditHaberler.cshtml
+++ b/Views/Panel/EditHaberler.cshtml
@@ -33,7 +33,7 @@
         <div>
             <label>Haber Tarihi: </label>
             <br />
-            <input id="haberTarihi" type="date" asp-for="HaberTarih" />
+            @*<input id="haberTarihi" asp-for="HaberTarih" hidden/>*@
         </div>
         <input type="submit" value="Gönder" />
     </form>
